Added generator and redirect

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -5,8 +5,6 @@
     <% include ./partials/_header %>
   </head>
   <body>
-      <% for (var fullURL in shortURL) { %>
-         <li><%= shortURL %> : <%= shortURL[fullURL] %></li>
-      <% }; %>
+         <li><%= shortURL %> : <%= redirectURL %></li>
   </body>
   </html>
