Updating link text

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -13,7 +13,7 @@
             </p>
           </form>
             <p>
-              <a href="/urls/<%= newUrl %>">link text</a>
+              <a href="/urls/<%= newUrl %>">Update my URL</a>
             </p>
         </li>
     <% } %>
