--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -5,7 +5,7 @@
     <% include ./partials/_header %>
   </head>
   <body>
-         <li>Short URL =  <%= shortURL %>
+         <li>Short URL =  <%= redirectURL %>
          <form action="/urls/<%= shortURL %>" method="POST">
           <input id="updateURL" type="text" name="updateURL" value= "<%= redirectURL %>"" style="width: 300px">
           <button> Update Now! </button>
