added encryption to cookies

--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head></head>
   <body style="font-size:20px; padding:50px;">
-    <form action="/register/email" method="POST"">
+    <form action="/register" method="POST"">
       <label for="email">Enter An Email:</label>
       <input id="email" type="email" name="email" style="width: 300px">
       <label for="password">Enter A Password:</label>
