Touched up code format and technical specifications

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,6 +17,8 @@
             </p>
         </li>
     <% } %>
-    <b> Click here to shorten URL</b>
+    <p>
+      <a href="/urls/new %>">Click Here to Shorten URL</a>
+    </p>
 </body>
 </html>
