--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head></head>
+  <head><% include ./partials/_header %></head>
   <body style="font-size:20px; padding:50px;">
     <form action="/register" method="POST"">
       <label for="email">Enter An Email:</label>
